deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellok8s-deployment
spec:
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 1
  replicas: 4
  selector:
    matchLabels:
      app: hellok8s
  template:
    metadata:
      labels:
        app: hellok8s
    spec:
      containers:
        - image: seandong/hellok8s:v4
          name: hellok8s-container
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 3000
          #   initialDelaySeconds: 3
          #   periodSeconds: 3
